# Projeto-de-CG

./: .gitignore  CMakeLists.txt  README.md  [  build.sh
src/: Bird.cpp  Bird.hpp  main.cpp
src/Flowers/: Flower.cpp  Flower.hpp  Seeder.cpp  Seeder.hpp
src/Flowers/FlowerTypes/: Daisy.cpp  Daisy.hpp  Rose.cpp  Rose.hpp  Sunflower.cpp  Sunflower.hpp
src/Helpers/: MathCalculus.cpp  MathCalculus.hpp
src/World/: Camera.cpp  Camera.hpp  Controller.hpp  Controllers.cpp  World.cpp  World.hpp
